# cli

./: .gitignore  .pre-commit-hooks.yaml  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  flake.nix  pyproject.toml
src/aidecl/: __init__.py  __main__.py  cli.py  converter.py  init_cmd.py  schema.py
src/aidecl/data/: schema.json.sha256
src/aidecl_validate/: __init__.py  cli.py  colors.py  converter.py  init_cmd.py  loader.py  schema.py  semantic.py
tests/: conftest.py  test_cli.py  test_loader.py  test_schema.py  test_semantic.py
tests/fixtures/: invalid.yaml  semantic-warning.yaml  valid.yaml
